--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,4 +25,4 @@ jobs:
           source_repo: "https://github.com/Sunert/Scripts.git"
           source_branch: "main"
           destination_branch: "ZIYE"
-          github_token: ${{ secrets.PAT1 }}
+          github_token: ${{ secrets.PAT }}
