--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: sunert-sync
+name: Sunert-sync
 on:
   schedule:
-    - cron: '1 */3 * * *'
+    - cron: '36 * * * *'
   workflow_dispatch:
   watch:
     types: started
@@ -23,6 +23,6 @@ jobs:
         if: env.PAT
         with:
           source_repo: "https://github.com/Sunert/Scripts.git"
-          source_branch: "main"
-          destination_branch: "main"
+          source_branch: "master"
+          destination_branch: "master"
           github_token: ${{ secrets.PAT }}
